@@ -11,7 +11,7 @@
 
 <P>
   Voor het gebruik van automatische taalkeuze, moet u uw webbrowser
-  vertellen wat jouw voorkeurstaal is.  Hoe u dat moet doen, hangt af
+  vertellen wat uw voorkeurstaal is.  Hoe u dat moet doen, hangt af
   van de browser die u gebruikt.
 </P>
 
@@ -52,7 +52,7 @@
   <DD>
     Microsoft Windows
     <PRE>
-      Tools (of Extras) -&gt; Internet Options -&gt; Languages
+      Tools (of View of Extras) -&gt; Internet Options -&gt; Languages
     </PRE>
   </DD>
   <DD>
