@@ -52,7 +52,7 @@
   <DD>
     Microsoft Windows
     <PRE>
-      Tools or View or Extras -&gt; Internet Options -&gt; (General) Languages
+      Tools (or View or Extras) -&gt; Internet Options -&gt; (General) Languages
     </PRE>
   </DD>
   <DD>
